--- a/app/views/admin/evaluation_recommendations/show.haml
+++ b/app/views/admin/evaluation_recommendations/show.haml
@@ -7,7 +7,7 @@
       %th Question/Response
   %tbody
     - @recommendations.each do |recommendation|
-      - if recommendation.score > 0.01
+      - if recommendation.score >= Recommendations::Engine.RECOMMENDATION_SCORE_THRESHOLD
         %tr.success
           %th{colspan: 3}
             #{recommendation.gift.title}
