--- a/app/views/recipient_gift_selections/_gift_basket.haml
+++ b/app/views/recipient_gift_selections/_gift_basket.haml
@@ -1,6 +1,6 @@
 .gift-basket-overlay{data: {behavior: 'gift-basket-overlay'}}
 
-.gift-basket{data: {behavior: 'gift-basket-container', profile_id: profile.id}}
+.gift-basket{data: {behavior: 'gift-basket-container', profile_id: profile.recipient_access_token, channel_name: 'RecipientGiftSelectionsChannel'}}
   .gift-basket__inner-wrap
     = link_to "< Back to Shopping", '#', data: {behavior: 'close-gift-basket'}, class: 'gift-basket__header small'   
     .gift-basket__main
