--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,6 +26,5 @@
       = render 'layouts/footer'
 
     = render 'pjax_modal_frame'
-    - if enable_gift_basket?
-      = render 'gift_selections/gift_basket', profile: gift_basket_profile
+    = render_gift_basket if enable_gift_basket?
     = yield :page_js
