--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -9,15 +9,33 @@
 
 .row.admin__search
   .col-sm-12
-    = form_for  [:admin, @gift_search], url: admin_gifts_path, html: {method: 'GET', class: 'form-inline', data: {behavior: 'form-loads-subcategories'}} do |form|
+    = form_for  [:admin, @gift_search], url: admin_gifts_path, html: {method: 'GET', class: 'form-horizontal', data: {behavior: 'form-loads-subcategories'}} do |form|
       .form-group
-        = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
-        = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
-        = form.collection_select :product_subcategory_id, ProductCategory.subcategories.where(parent_id: @gift_search.product_category_id), :id, :name, {prompt: 'Sub-category'}, class: 'form-control', data: {behavior: 'product-subcategory-input'}
-        %button.btn.btn-primary
-          %i.glyphicon.glyphicon-search
-          Search
-        = link_to 'Clear Search (Show All)', admin_gifts_path, class: 'btn btn-default'
+        %label.col-sm-2.control-label Title or SKU
+        .col-sm-4
+          = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
+      .form-group
+        %label.col-sm-2.control-label Category
+        .col-sm-4
+          = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
+          = form.collection_select :product_subcategory_id, ProductCategory.subcategories.where(parent_id: @gift_search.product_category_id), :id, :name, {prompt: 'Sub-category'}, class: 'form-control', data: {behavior: 'product-subcategory-input'}
+      .form-group
+        %label.col-sm-2.control-label Price Range
+        .col-sm-4
+          .input-group
+            .input-group-addon $
+            = form.text_field :min_price, placeholder: 'Min Price', class: 'form-control'
+            .input-group-addon .00
+          .input-group
+            .input-group-addon $
+            = form.text_field :max_price, placeholder: 'Max Price', class: 'form-control'
+            .input-group-addon .00
+      .form-group
+        .col-sm-offset-2.col-sm-4
+          %button.btn.btn-primary
+            %i.glyphicon.glyphicon-search
+            Search
+          = link_to 'Clear Search (Show All)', admin_gifts_path, class: 'btn btn-default'
 
 .row
   .col-sm-12
