--- a/app/views/admin/users/_form.haml
+++ b/app/views/admin/users/_form.haml
@@ -4,6 +4,7 @@
     = form.input :last_name, label: 'Last Name'
     = form.input :email
     = form.input :admin, label: 'Allow user to administer the site.'
+    = form.input :unmoderated_testing_platform, label: 'This user will use the unmoderated testing platform.'
 
   .form-actions
     = form.submit 'Save', class: 'btn btn-primary'
