--- a/app/views/giftee_invitations/create.haml
+++ b/app/views/giftee_invitations/create.haml
@@ -3,7 +3,11 @@
 
   %h1 Thank You!
 
-  %p Thank you for participating in the Wrapt Beta and inviting #{@profile.name} to Wrapt.  Your participation &amp; feedback will directly impact the success of our product.
+  %p 
+    Thank you for participating in the Wrapt
+    %sup.trademark
+      &#8482;
+    Beta and inviting #{@profile.name} to Wrapt.  Your participation &amp; feedback will directly impact the success of our product.
 
   %p
     Sincerely,
