--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -5,7 +5,9 @@
         .table-display
           %ul
             %li
-              2017 Wrapt All Rights Reserved
+              2017 Wrapt
+              %sup.trademark &#8482;
+              All Rights Reserved
             %li
               = link_to "Privacy Policy", privacy_policy_path
             %li
