--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -24,7 +24,7 @@
     %footer
       .container-fluid
         .row(style="text-align: center;")
-          =embedded_svg('wrapt-logo', class: "footer__icon-wrapt-logo")
+          =embedded_svg('wrapt-logo-tm', class: "footer__icon-wrapt-logo")
 
     = render 'pjax_modal_frame'
     = yield :page_js
