--- a/app/views/password_reset_requests_mailer/reset_password_email.html.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.html.haml
@@ -1,5 +1,13 @@
-%h1 Reset Your Wrapt Password
+%h1 
+  Reset Your Wrapt
+  %sup
+    &#8482;
+  Password
 
-%p Please use the following link to reset your wrapt password:
+%p 
+  Please use the following link to reset your Wrapt 
+  %sup
+    &#8482;
+  password:
 
 %p= link_to @reset_password_url, @reset_password_url
