--- a/app/views/static_pages/science_of_gifting.html.haml
+++ b/app/views/static_pages/science_of_gifting.html.haml
@@ -2,7 +2,11 @@
   .row
     .col-xs-10.col-xs-offset-1
       %h1.about-page__header Science of Gifting
-      %p.about-page__tagline WRAPT helps people give, connect and understand each other better. 
+      %p.about-page__tagline 
+        WRAPT 
+        %sup.trademark
+          &#8482;
+        helps people give, connect and understand each other better. 
 
       -# .row.about-page__subsection.with-image.image-left
       -#   = image_tag 'http://placehold.it/456x474'
@@ -88,9 +92,25 @@
               =link_to "a recent paper [pdf]", "http://apps.olin.wustl.edu/faculty/goodman/Giving%20Happiness.pdf", target: "_blank"
               by researchers at Washington University in St. Louis and Seoul National University found that people who expect a material gift who get an experiential one instead report being satisfied anyway. In contrast, those who expect an experiential gift but get an item instead are disappointed. "If gifts are about expressing and forging love, one of the best ways to do that is with your own time," Pugh said. "That will always be a really powerful gift."
             %h4
-              WRAPT is a platform for giving gifts from the heart.
+              WRAPT 
+              %sup.trademark
+                &#8482;
+              is a platform for giving gifts from the heart.
             %p
-              Because we know that your giftee is one of a kind, our Wrapt quiz helps you easily identify what makes her tick. WRAPT’s unique matching intelligence pins down her Personality, Passions, and Purpose to recommend the perfect gift&#8212;a gift that is about more than just her interests, a gift that brings out who she is and what she cares about in this world. All Wrapt gifts are artisanal&#8212;of the hand-made, fair trade, and sustainable variety making them feel special and meaningful. These gifts also support artisan and artisan communities around the globe, offering stories of positive social change to share with your gift recipient. Wrapt gifts, beyond artisanal items include experiences and funds. Experiences take our gifts to the next level.  For example, the hand woven picnic basket can be used to create a memorable afternoon or evening, with a meal, set in a favorite place, to be remembered for years to come. 
+              Because we know that your giftee is one of a kind, our Wrapt
+              %sup.trademark
+                &#8482;
+              quiz helps you easily identify what makes her tick. WRAPT
+              =succeed "’" do
+                %sup.trademark
+                  &#8482;
+              s unique matching intelligence pins down her Personality, Passions, and Purpose to recommend the perfect gift&#8212;a gift that is about more than just her interests, a gift that brings out who she is and what she cares about in this world. All Wrapt
+              %sup.trademark
+                &#8482;
+              gifts are artisanal&#8212;of the hand-made, fair trade, and sustainable variety making them feel special and meaningful. These gifts also support artisan and artisan communities around the globe, offering stories of positive social change to share with your gift recipient. Wrapt
+              %sup.trademark
+                &#8482;
+              gifts, beyond artisanal items include experiences and funds. Experiences take our gifts to the next level.  For example, the hand woven picnic basket can be used to create a memorable afternoon or evening, with a meal, set in a favorite place, to be remembered for years to come. 
             %p
               Our Funds section is a unique way to take one of her bucket list items, causes or projects, and invite other friends and family to go in on making one of her dreams come true. You name the gift, set the price and we collect the funds, create her personal card, and wrapt, with love for a group gift experience she is not likely to forget.
       .row.about-page__subsection
