--- a/app/views/user_activations_mailer/activation_needed_email.html.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.html.haml
@@ -1,5 +1,13 @@
-%h1 WRAPT
+%h1 
+  WRAPT
+  %sup.trademark
+    &#8482;
 
-%p You're invited to try WRAPT.  To sign up click here:
+%p 
+  You're invited to try WRAPT
+  =succeed ". " do
+    %sup.trademark
+      &#8482;
+    To sign up click here:
 
 %p= link_to @activation_url, @activation_url
