--- a/app/views/user_activations_mailer/activation_success_email.html.haml
+++ b/app/views/user_activations_mailer/activation_success_email.html.haml
@@ -1,5 +1,13 @@
-%h1 WRAPT
+%h1 
+  WRAPT
+  %sup.trademark
+    &#8482;
 
-%p Thank you for signing up for WRAPT.  Your account is now active.
+%p
+  Thank you for signing up for WRAPT
+  =succeed ". " do
+    %sup.trademark
+      &#8482;
+  Your account is now active.
 
 %p= link_to root_url, root_url
