--- a/app/views/giftee_invitations/new.haml
+++ b/app/views/giftee_invitations/new.haml
@@ -3,7 +3,12 @@
 
   %h1= "Get #{@profile.name} involved"
 
-  %p We will invite her to Wrapt, get her feedback on our recommendations and reveal the selection you made.
+  %p 
+    We will invite her to Wrapt
+    =succeed "," do
+      %sup.trademark
+      &#8482;
+    get her feedback on our recommendations and reveal the selection you made.
 
   = simple_form_for @profile, url: profile_giftee_invitations_path(@profile), data: {submits_to_pjax_modal: true}, method: :post do |form|
     = form.input :email, label: 'Email Address'
