--- a/app/views/profile_recipient_reviews/show.haml
+++ b/app/views/profile_recipient_reviews/show.haml
@@ -2,7 +2,7 @@
   .row
     .col-xs-12
       %h1.text-center
-        = "Welcome to Wrapt, #{@profile.name}!"
+        = "Welcome to Wrapt<sup class='trademark'>&#8482;</sup>, #{@profile.name}!".html_safe
       %p.lead.tan-002.ph2.text-center
         As part of our beta we're inviting gift recipients to our site to gather feedback on gift recommendations we've given to #{@profile.owner.first_name} based on their responses to questions about you.  Those recommendations are listed below.  Please review each gift and tell us if you like it or dislike it.  If you would want it as a gift - add it to your gift basket.
   .row.wrapt-carousel--wrapper
