--- a/app/views/gift_recommendations/_gift_like.haml
+++ b/app/views/gift_recommendations/_gift_like.haml
@@ -3,5 +3,9 @@
     = embedded_svg('icon-like', xlink_class: 'icon-liked-use', class: 'recommendation__icon-liked')
     .small-02 You Liked This
 - else
-  = link_to profile_gift_likes_path(profile), method: :post, remote: true, data: {type: 'html', params: {gift_like: {gift_id: gift.id}}} do
-    = embedded_svg('icon-like', xlink_class: 'icon-liked-use', class: 'recommendation__icon-like')
+  .btn-group
+    = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
+      =embedded_svg('icon-like', xlink_class: 'icon-like-use', class: 'recommendation__icon-like')
+    %ul.dropdown-menu.dropdown-menu-right.pa1
+      - GiftLike.reasons.keys.each do |reason_key|
+        %li= link_to like_reason_label(reason_key), profile_gift_likes_path(profile), method: :post, remote: true, data: {type: 'html', params: {gift_like: {gift_id: gift.id, reason: reason_key}}}, class: 'gift_like_reason'
