MD qa items [#139372049]

--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -348,7 +348,7 @@ a.liked:focus {
   width: 400px;
   position: absolute;
   bottom: 40px;
-  background-color: $gray-010;
+  background-color: rgba(51, 51, 51, .8);
   height: 56px;
 }
 .gr-image-carousel__nav {
