--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -154,3 +154,8 @@
   background-color: #E9ECEC;
   border: none;
 }
+.btn.disabled, 
+.btn[disabled], 
+fieldset[disabled] .btn {
+  opacity: 1;
+}
