--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -28,6 +28,10 @@ label {
 .hint {
   margin-bottom: 10px;
 }
+.hint__inline {
+  display: inline-block;
+  margin-left: 12px;
+}
 .form-control {
   margin-top: 4px;
   padding: 14px 12px;
@@ -108,7 +112,7 @@ label {
   
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    margin-top: -18.5px; 
+    margin-top: -15.5px; 
     // You need to specify a margin in Chrome, but in Firefox and IE it is automatic
   }
 
@@ -116,25 +120,40 @@ label {
   // Firefox
   // IE
   input[type=range]::-webkit-slider-thumb {
-    height: 40px;
-    width: 40px;
+    height: 34px;
+    width: 34px;
     border-radius: 50%;
     background: $blue-001;
     cursor: pointer;
   } 
   input[type=range]::-moz-range-thumb {
-    height: 40px;
-    width: 40px;
+    height: 34px;
+    width: 34px;
     border-radius: 50%;
     background: $blue-001;
     cursor: pointer;
   } 
   input[type=range]::-ms-thumb {
-    height: 40px;
-    width: 40px;
+    height: 34px;
+    width: 34px;
     border-radius: 50%;
-    background: $blue-001;
+    background-color: $blue-001;
     cursor: pointer;
+  }
+  input[type=range]:focus::-webkit-slider-thumb {
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,1);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,1);
+    box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,1);
+  }
+  input[type=range]:focus::-moz-range-thumb {
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,0.8);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,0.8);
+    box-shadow: 0px 0px 14px 0px rgba(145, 166, 205, 0.8);
+  }
+  input[type=range]:focus::-ms-thumb {
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,0.8);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,0.8);
+    box-shadow: 0px 0px 14px 0px rgba(145, 166, 205,0.8);
   }
 
   // END style the thumb
