--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -3,9 +3,10 @@
   - if @question_response.survey_question.other_option
     = form.association :survey_question_options, as: :check_boxes, collection: [@question_response.survey_question.other_option], label_method: :text, input_html: {data: {behavior: 'option-id-input other-option'}}
 
-%label= label
-- if @question_response.survey_question.multiple_option_responses
-  .hint Select All That Apply
+%label
+  = label
+  - if @question_response.survey_question.multiple_option_responses
+    .hint.hint__inline Select All That Apply
 - @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
   .row.option-row
     .col-xs-12
