md qa review adjustments [#139372049]

--- a/app/assets/stylesheets/modules/_gift_basket.scss
+++ b/app/assets/stylesheets/modules/_gift_basket.scss
@@ -59,6 +59,7 @@
 .remove-gift-link__icon-close {
   height: 12px;
   width: 12px;
+  color: $gray-005;
 }
 .gift-basket__gift:hover .gift-basket__remove-gift-link,
 .gift-basket__gift:focus .gift-basket__remove-gift-link,
