fix height on gift details [#138958347]

--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -268,9 +268,9 @@ a.liked:focus {
 }
 
 .gr-carousel__gift-details {
-  min-height: 228px;
-  max-height: 228px;
-  overflow: scroll;
+  // min-height: 228px;
+  // max-height: 228px;
+  // overflow: scroll;
   width: 430px;
   padding-right: 10px;
 }
