gift basket adjustments [#138958791]

--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -170,9 +170,9 @@ label {
   }
 
   input[type=range]:focus::-webkit-slider-runnable-track {
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(196,170,127,0.5);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(196,170,127,0.5);
-    box-shadow: 0px 0px 10px 0px rgba(196,170,127,0.5);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(145, 166, 205,0.8);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(145, 166, 205,0.8);
+    box-shadow: 0px 0px 10px 0px rgba(145, 166, 205,0.8);
   }
 
   input[type=range]::-moz-range-track {
