--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -129,12 +129,19 @@ $gr-carousel-nav__width: 82.5px;
   position: relative;
   overflow: hidden;
 }
+
 .gr-carousel__indicator:last-child .gr-carousel__thumbnail {
   margin-right: 0;
 }
 
 .gr-carousel__indicator img {
   width: 100%;
+}
+.gr-carousel__indicator img.orientation-portrait {
+  top: 25%;
+  -webkit-transform: translateY(-25%);
+  -ms-transform: translateY(-25%);
+  transform: translateY(-25%);
 }
 
 // gift recommendations carousel gift
