--- a/app/views/giftee_invitations/new.haml
+++ b/app/views/giftee_invitations/new.haml
@@ -1,9 +1,9 @@
 .row
   .col-xs-12
 
-  %h1= "Get #{@profile.name} involved"
+  %h1= "Confirm #{@profile.name}'s Email Address"
 
-  %p 
+  %p.lead.tan-002
     We will invite her to Wrapt
     =succeed "," do
       %sup.trademark
