--- a/app/assets/stylesheets/modules/_modals.scss
+++ b/app/assets/stylesheets/modules/_modals.scss
@@ -1,6 +1,7 @@
 .modal-content {
   @include shadowed-box__05;
   border: 0;
+  background-color: $blue-010;
 }
 .modal-backdrop.in {
   opacity: .3;
@@ -9,14 +10,15 @@
   border-bottom: 0;
 }
 .modal h1 {
-  text-transform: uppercase;
-  font-size: rem(18);
   text-align: center;
-  @include akkurat-bold;
+  letter-spacing: initial;
+  margin-bottom: 8px;
 }
 .modal p.lead {
-  font-size: rem(16);
+  font-size: rem(20);
   text-align: center;
+  line-height: 1.4;
+  margin-bottom: 63px;
 }
 .modal .center-block {
   width: 75%;
