--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -26,6 +26,14 @@
 .btn-primary {
   letter-spacing: 2px;
 }
+.modal-content .btn-primary,
+.new-invite-request .btn-primary {
+  text-transform: uppercase;
+}
+.btn-primary:focus, 
+.btn-primary.focus {
+  border-color: darken($blue-004, 10%)
+}
 
 .btn-default:active,
 .btn-default:active:hover, 
@@ -55,6 +63,7 @@
 .btn.disabled:hover,
 .btn.disabled:focus {
   box-shadow: none;
+  border-color: $gray-003;
 }
 .btn-secondary {
   background-color: $orange-001;
