--- a/app/views/password_reset_requests/new.haml
+++ b/app/views/password_reset_requests/new.haml
@@ -12,4 +12,4 @@
       .form-actions
         = form.submit 'Submit', class: 'btn btn-primary btn-full-width'
       
-      %p.text-center.mt4.help= link_to 'Return to Sign in', new_user_session_path
+      %p.text-center.mt4.mb0= link_to 'Return to Sign in', new_user_session_path
