fallback email text

--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
@@ -1,7 +1,7 @@
 %p= "Dear #{@profile.name},"
 
 %p
-  #{@profile.owner.first_name} was shopping for you on Wrapt
+  #{@profile.owner.first_name || 'Someone'} was shopping for you on Wrapt
   %sup
     &#8482;
   and picked out some gifts for you.  We'd like to see how you like what they picked.
