--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
@@ -1,6 +1,6 @@
 = "Dear #{@profile.name},"
 
-#{@profile.owner.first_name} was shopping for you on Wrapt and picked out some gifts for you.  We'd like to see how you like what they picked.
+#{@profile.owner.first_name || 'Someone'} was shopping for you on Wrapt and picked out some gifts for you.  We'd like to see how you like what they picked.
 
 Please use the following URL to see what they picked out.
 
